headers/phonon.h


    typedef void                IPLvoid;            
    typedef int                 IPLint32;           
    typedef float               IPLfloat32;         
    typedef unsigned char       IPLbyte;            
    typedef char*               IPLstring;          
    typedef void*               IPLhandle;
    typedef enum {
        IPL_STATUS_SUCCESS,         
        IPL_STATUS_FAILURE,         
        IPL_STATUS_OUTOFMEMORY,     
        IPL_STATUS_INITIALIZATION   
    } IPLerror;
    typedef struct {
        IPLfloat32 x;   
        IPLfloat32 y;   
        IPLfloat32 z;   
    } IPLVector3;
    typedef enum {
        IPL_SCENETYPE_PHONON,   
        IPL_SCENETYPE_EMBREE,   
        IPL_SCENETYPE_FIRERAYS, 
        IPL_SCENETYPE_CUSTOM    
    } IPLSceneType;
    typedef struct {
        IPLSceneType        sceneType;              
        IPLint32            numRays;                
        IPLint32            numDiffuseSamples;      
        IPLint32            numBounces;             
        IPLfloat32          irDuration;             
        IPLint32            ambisonicsOrder;        
        IPLint32            maxConvolutionSources;  
    } IPLSimulationSettings;
    typedef struct {
        IPLint32    indices[3]; 
    } IPLTriangle;
    typedef struct {
        IPLfloat32  lowFreqAbsorption;      
        IPLfloat32  midFreqAbsorption;      
        IPLfloat32  highFreqAbsorption;     
        IPLfloat32  scattering;             
        IPLfloat32  lowFreqTransmission;    
        IPLfloat32  midFreqTransmission;    
        IPLfloat32  highFreqTransmission;   
    } IPLMaterial;
    typedef void(*IPLLoadSceneProgressCallback)(IPLfloat32 progress);
    typedef void(*IPLFinalizeSceneProgressCallback)(IPLfloat32 progress);
    typedef void (*IPLClosestHitCallback)(const IPLfloat32* origin, const IPLfloat32* direction,
        const IPLfloat32 minDistance, const IPLfloat32 maxDistance, IPLfloat32* hitDistance, IPLfloat32* hitNormal,
        IPLMaterial** hitMaterial, IPLvoid* userData);
    typedef void (*IPLAnyHitCallback)(const IPLfloat32* origin, const IPLfloat32* direction,
        const IPLfloat32 minDistance, const IPLfloat32 maxDistance, IPLint32* hitExists, IPLvoid* userData);
    IPLAPI IPLerror iplCreateScene(IPLhandle context, IPLhandle computeDevice,
        IPLSimulationSettings simulationSettings, IPLint32 numMaterials, IPLhandle* scene);
    IPLAPI IPLvoid iplSetSceneMaterial(IPLhandle scene, IPLint32 materialIndex, IPLMaterial material);
    IPLAPI IPLvoid iplSetRayTracerCallbacks(IPLhandle scene, IPLClosestHitCallback closestHitCallback,
        IPLAnyHitCallback anyHitCallback, IPLvoid* userData);
    IPLAPI IPLerror iplCreateStaticMesh(IPLhandle scene, IPLint32 numVertices, IPLint32 numTriangles,
        IPLhandle* staticMesh);
    IPLAPI IPLvoid iplDestroyStaticMesh(IPLhandle* staticMesh);
    IPLAPI IPLvoid iplSetStaticMeshVertices(IPLhandle scene, IPLhandle staticMesh, IPLVector3* vertices);
    IPLAPI IPLvoid iplSetStaticMeshTriangles(IPLhandle scene, IPLhandle staticMesh, IPLTriangle* triangles);
    IPLAPI IPLvoid iplSetStaticMeshMaterials(IPLhandle scene, IPLhandle staticMesh, IPLint32* materialIndices);
    IPLAPI IPLvoid iplFinalizeScene(IPLhandle scene, IPLFinalizeSceneProgressCallback progressCallback);
    IPLAPI IPLint32 iplSaveFinalizedScene(IPLhandle scene, IPLbyte* data);
    IPLAPI IPLerror iplLoadFinalizedScene(IPLhandle context, IPLSimulationSettings simulationSettings,
        IPLbyte* data, IPLint32 size, IPLhandle computeDevice, IPLLoadSceneProgressCallback progressCallback, IPLhandle* scene);
    IPLAPI IPLvoid iplDumpSceneToObjFile(IPLhandle scene, IPLstring fileBaseName);
    IPLAPI IPLerror iplCreateEnvironment(IPLhandle context, IPLhandle computeDevice,
        IPLSimulationSettings simulationSettings, IPLhandle scene, IPLhandle probeManager, IPLhandle* environment);