src/bindgen.rs

extern "C" {
    /// Specifies a single material used by a Scene object. All materials must be completely specified before
    /// simulation occurs, otherwise simulation results will be incorrect.
    ///
    /// \param  scene               Handle to the Scene object.
    /// \param  materialIndex       Index of the material to set. Between 0 and N-1, where N is the value of
    /// \c numMaterials passed to \c ::iplCreateScene.
    /// \param  material            The material properties to use.
    pub fn iplSetSceneMaterial(
        scene: IPLhandle,
        materialIndex: IPLint32,
        material: IPLMaterial,
    ) -> IPLvoid;
}
extern "C" {
    /// Specifies callbacks that allow a Scene object to call into a user-specified custom ray tracer. This function
    /// should only be called if using a custom ray tracer, or else undefined behavior will occur. When using a custom
    /// ray tracer, this function must be called before any simulation occurs, otherwise undefined behavior will
    /// occur.
    ///
    /// \param  scene               Handle to the Scene object.
    /// \param  closestHitCallback  Pointer to a function that returns the closest hit along a ray.
    /// \param  anyHitCallback      Pointer to a function that returns whether a ray hits anything.
    /// \param  userData            Pointer to a block of memory containing arbitrary data for use
    /// by the closest hit and any hit callbacks.
    pub fn iplSetRayTracerCallbacks(
        scene: IPLhandle,
        closestHitCallback: IPLClosestHitCallback,
        anyHitCallback: IPLAnyHitCallback,
        userData: *mut IPLvoid,
    ) -> IPLvoid;
}
extern "C" {
    /// Creates a Static Mesh object. A Static Mesh object represents a triangle mesh that does not change after it
    /// is created. A Static Mesh object also contains a mapping between each of its triangles and their acoustic
    /// material properties. Static Mesh objects should be used for scene geometry that is guaranteed to never change,
    /// such as rooms, buildings, or triangulated terrain. A Scene object may contain multiple Static Mesh objects,
    /// although typically one is sufficient.
    ///
    /// \param  scene               Handle to the Scene object to which to add the Static Mesh object.
    /// \param  numVertices         Number of vertices in the triangle mesh.
    /// \param  numTriangles        Number of triangles in the triangle mesh.
    /// \param  staticMesh          [out] Handle to the created Static Mesh object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateStaticMesh(
        scene: IPLhandle,
        numVertices: IPLint32,
        numTriangles: IPLint32,
        staticMesh: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys a Static Mesh object. If any other API objects are still referencing the Static Mesh object, it will
    /// not be destroyed; destruction occurs when the object's reference count reaches zero. Since the Scene object
    /// maintains an internal reference to the Static Mesh object, you may call this function at any point after
    /// fully specifying the Static Mesh object using \c ::iplSetStaticMeshVertices, \c ::iplSetStaticMeshTriangles,
    /// and \c ::iplSetStaticMeshMaterials.
    ///
    /// \param  staticMesh          [in, out] Address of a handle to the Static Mesh object to destroy.
    pub fn iplDestroyStaticMesh(staticMesh: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Specifies the vertices of a Static Mesh object. All vertices must be converted from the game engine's
    /// coordinate system to Phonon's coordinate system before being passed to this function.
    ///
    /// \param  scene               Handle to the Scene object containing the Static Mesh object.
    /// \param  staticMesh          Handle to the Static Mesh object.
    /// \param  vertices            Array containing the coordinates of all vertices in the Static Mesh object.
    /// The number of \c IPLVector3 objects in the array must be equal to the value of
    /// \c numVertices passed to \c ::iplCreateStaticMesh.
    pub fn iplSetStaticMeshVertices(
        scene: IPLhandle,
        staticMesh: IPLhandle,
        vertices: *mut IPLVector3,
    ) -> IPLvoid;
}
extern "C" {
    /// Specifies the triangles of a Static Mesh object. Triangle indices passed using this function refer to
    /// the vertex array passed using \c ::iplSetStaticMeshVertices.
    ///
    /// \param  scene               Handle to the Scene object containing the Static Mesh object.
    /// \param  staticMesh          Handle to the Static Mesh object.
    /// \param  triangles           Array containing all triangles in the Static Mesh object. The number of
    /// \c IPLTriangle objects in the array must be equal to the value of
    /// \c numTriangles passed to \c ::iplCreateStaticMesh.
    pub fn iplSetStaticMeshTriangles(
        scene: IPLhandle,
        staticMesh: IPLhandle,
        triangles: *mut IPLTriangle,
    ) -> IPLvoid;
}
extern "C" {
    /// Specifies the materials associated with each triangle in a Static Mesh object. Material indices passed
    /// using this function refer to the array containing material data passed to \c ::iplSetSceneMaterial.
    ///
    /// \param  scene               Handle to the Scene object containing the Static Mesh object.
    /// \param  staticMesh          Handle to the Static Mesh object.
    /// \param  materialIndices     Array containing material indices for all triangles in the Static Mesh object.
    /// The number of material indices in the array must be equal to the value of
    /// \c numTriangles passed to \c ::iplCreateStaticMesh.
    pub fn iplSetStaticMeshMaterials(
        scene: IPLhandle,
        staticMesh: IPLhandle,
        materialIndices: *mut IPLint32,
    ) -> IPLvoid;
}
extern "C" {
    /// Finalizes a scene and builds internal data structures. Once this function is called, you may not modify
    /// the Scene object or any Static Mesh objects it contains in any way. This function results in various
    /// internal data structures being generated; if using Radeon Rays, it results in scene data being uploaded
    /// to the GPU. This is a time-consuming, blocking call, so do not call it from performance-sensitive code.
    ///
    /// \param  scene               Handle to the Scene object.
    /// \param  progressCallback    Pointer to a function that reports the percentage of this function's work
    /// that has been completed. May be \c NULL.
    pub fn iplFinalizeScene(
        scene: IPLhandle,
        progressCallback: IPLFinalizeSceneProgressCallback,
    ) -> IPLvoid;
}
extern "C" {
    /// Serializes a Scene object to a byte array. The \c ::iplFinalizeScene function must have been called on
    /// the Scene object before calling this function. This function can only be called on a Scene object that
    /// has been created using the Phonon built-in ray tracer.
    ///
    /// \param  scene               Handle to the Scene object.
    /// \param  data                [out] Byte array into which the Scene object will be serialized. It is the
    /// caller's responsibility to manage memory for this array. The array must be large
    /// enough to hold all the data in the Scene object. May be \c NULL, in which case
    /// no data is returned; this is useful when finding out the size of the data stored
    /// in the Scene object.
    pub fn iplSaveFinalizedScene(scene: IPLhandle, data: *mut IPLbyte) -> IPLint32;
}
extern "C" {
    /// Creates a Scene object based on data stored in a byte array. After this function is called, it is not
    /// necessary to call \c ::iplFinalizeScene on the resulting Scene object.
    ///
    /// \param  context             The Context object used by the game engine.
    /// \param  simulationSettings  The settings to use for the simulation. This must exactly match the settings
    /// that were used to create the original Scene object that was passed to
    /// \c ::iplSaveFinalizedScene, except for the \c sceneType and \c simulationType
    /// data members. This allows you to use the same file to create a Scene object
    /// that uses any ray tracer you prefer.
    /// \param  data                Byte array containing the serialized representation of the Scene object. Must
    /// not be \c NULL.
    /// \param  size                Size (in bytes) of the serialized data.
    /// \param  computeDevice       Handle to a Compute Device object. Only required if using Radeon Rays for
    /// ray tracing, may be \c NULL otherwise.
    /// \param  progressCallback    Pointer to a function that reports the percentage of this function's work
    /// that has been completed. May be \c NULL.
    /// \param  scene               [out] Handle to the created Scene object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplLoadFinalizedScene(
        context: IPLhandle,
        simulationSettings: IPLSimulationSettings,
        data: *mut IPLbyte,
        size: IPLint32,
        computeDevice: IPLhandle,
        progressCallback: IPLLoadSceneProgressCallback,
        scene: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Saves a Scene object to an OBJ file. An OBJ file is a widely-supported 3D model file format, that can be
    /// displayed using a variety of software on most PC platforms. The OBJ file generated by this function can be
    /// useful for detecting problems that occur when exporting scene data from the game engine to Phonon. The
    /// \c ::iplFinalizeScene function must have been called on the Scene object before calling this function.
    /// This function can only be called on a Scene object that has been created using the Phonon built-in ray tracer.
    ///
    /// \param  scene               Handle to the Scene object.
    /// \param  fileBaseName        Absolute or relative path to the OBJ file to generate.
    pub fn iplDumpSceneToObjFile(scene: IPLhandle, fileBaseName: IPLstring) -> IPLvoid;
}
extern "C" {
    /// Creates an Environment object. It is necessary to call this function even if you are not using the sound
    /// propagation features of Phonon.
    ///
    /// \param  context             The Context object used by the game engine.
    /// \param  computeDevice       Handle to a Compute Device object. Only required if using Radeon Rays for
    /// ray tracing, or if using TrueAudio Next for convolution, may be \c NULL otherwise.
    /// \param  simulationSettings  The settings to use for simulation. This must be the same settings passed to
    /// \c ::iplCreateScene or \c ::iplLoadFinalizedScene, whichever was used to create
    /// the Scene object passed in the \c scene parameter to this function.
    /// \param  scene               The Scene object. If created using \c ::iplCreateScene, then \c ::iplFinalizeScene
    /// must have been called on the Scene object before passing it to this function.
    /// May be \c NULL, in which case only direct sound will be simulated, without
    /// occlusion or any other indirect sound propagation.
    /// \param  probeManager        The Probe Manager object. May be \c NULL if not using baked data.
    /// \param  environment         [out] Handle to the created Environment object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateEnvironment(
        context: IPLhandle,
        computeDevice: IPLhandle,
        simulationSettings: IPLSimulationSettings,
        scene: IPLhandle,
        probeManager: IPLhandle,
        environment: *mut IPLhandle,
    ) -> IPLerror;
}
